# Vibelang

./: .env  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  genparanthesis.yb  hello.vibe
.cursor/agents/: vibelang-lead.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: cargo-deny.yml  cross-language-benchmarks.yml  docs-quality.yml  examples-quality-gates.yml  phase1-frontend.yml  phase13-editor-ux.yml  phase2-native.yml  phase3-concurrency.yml  phase4-indexer-lsp.yml  phase5-ai-sidecar.yml  phase6-extension-parity.yml  phase6-metrics.yml  phase6-portability.yml  phase7-language-validation.yml  phase7-readme-quality.yml  release-notes-automation.yml  secret-scan.yml  third-party-benchmarks.yml  v1-cli-ux.yml  v1-packaged-release.yml  v1-release-gates.yml
ai/sidecar/: architecture.md  cost_model.md  offline_mode.md
book/: book.toml
book/src/: SUMMARY.md  appendix_a_keywords.md  appendix_b_operators.md  appendix_c_stdlib.md  ch01_getting_started.md  ch02_core_syntax_semantics.md  ch02_first_program.md  ch03_syntax_and_semantics.md  ch03_types_functions_errors.md  ch04_contracts_examples.md  ch04_types_and_functions.md  ch05_control_flow.md  ch05_effects_performance.md  ch06_concurrency.md  ch06_contracts_and_intent.md  ch07_effects_system.md  ch07_tooling.md  ch08_error_handling.md  ch08_intent_sidecar.md  ch09_collections.md  ch09_migration_compatibility.md  ch10_advanced_internals.md  ch10_modules_and_packages.md  ch11_concurrency.md  ch11_lexical_structure_keywords_and_literals.md  ch12_expressions_and_control_flow_deep_dive.md  ch12_ownership_and_memory.md  ch13_advanced_patterns.md  ch13_strings_containers_and_data_structures.md  ch14_compiler_internals.md  ch14_modules_imports_and_visibility.md  ch15_ownership_sendability_and_memory.md  ch15_toolchain.md  ch16_abi_ffi_and_unsafe_boundaries.md  ch16_production.md  ch17_building_real_apps.md  ch17_determinism_profiles_and_release_engineering.md  ch18_production_adoption_patterns.md  ch19_concept_drills_and_pattern_workbook.md  ch20_reference_appendices_for_teams.md  (+1 more)
compiler/codegen/: README.md
compiler/frontend/: README.md  ast_schema.md  diagnostic_codes.md
compiler/indexer/: README.md  performance.md
compiler/intent/: README.md
compiler/ir/: hir_schema.md  overview.md
compiler/tests/: frontend_cases.md  intent_cases.md
crates/vibe_ast/: Cargo.toml
crates/vibe_cli/: Cargo.toml  build.rs
crates/vibe_cli/src/: deterministic_utils.rs  example_runner.rs  main.rs  module_resolver.rs
crates/vibe_cli/tests/: cli_help_snapshots.rs  cli_version.rs  contract_runtime_enforcement.rs  frontend_fixtures.rs  phase12_package_ecosystem.rs  phase12_stdlib.rs  phase12_test_ergonomics.rs  phase2_native.rs  phase4_indexer.rs  phase5_intent_lint.rs  phase6_ecosystem.rs  phase7_concurrency.rs  phase7_intent_validation.rs  phase7_v1_tightening.rs  phase7_validation.rs  selfhost_m3_expansion.rs
crates/vibe_codegen/: Cargo.toml
crates/vibe_codegen/src/: lib.rs
crates/vibe_diagnostics/: Cargo.toml
crates/vibe_doc/: Cargo.toml
crates/vibe_fmt/: Cargo.toml
crates/vibe_hir/: Cargo.toml
crates/vibe_indexer/: Cargo.toml
crates/vibe_indexer/src/: extract.rs  incremental.rs  layout.rs  lib.rs  model.rs  queries.rs  store.rs  watcher.rs
crates/vibe_lexer/: Cargo.toml
crates/vibe_lsp/: Cargo.toml
crates/vibe_lsp/src/: capabilities.rs  handlers.rs  legacy.rs  lib.rs  protocol.rs  session.rs
crates/vibe_mir/: Cargo.toml
crates/vibe_parser/: Cargo.toml
crates/vibe_pkg/: Cargo.toml
crates/vibe_runtime/: Cargo.toml
crates/vibe_sidecar/: Cargo.toml
crates/vibe_sidecar/src/: ai_analyzer.rs  config.rs  index_access.rs  lib.rs  llm_cache.rs  llm_client.rs  models.rs  policy.rs  prompts.rs  service.rs  telemetry.rs
crates/vibe_sidecar/tests/: ai_analyzer_test.rs
crates/vibe_types/: Cargo.toml
docs/: charter.md  development_checklist.md  language_validation_matrix.md  non_goals.md  sample_programs_catalog.md
docs/benchmarks/: third_party_full_report.md
docs/checklists/: benchmarks.md  compiler_readiness.md  development_checklist.md  docs_walkthrough_checklist.md  features_and_optimizations.md  ga_go_no_go_checklist.md  implementation_execution_board.md  release_candidate_checklist.md
docs/cli/: help_manual.md  version_output.md
docs/debugging/: workflow.md
docs/docs_program/: engine_and_layout.md  information_architecture.md  style_guide.md  versioning_strategy.md
docs/ide/: editor_ci_consistency.md  syntax_color_guide.md  vscode_cursor_setup.md
docs/install/: linux.md  macos.md  troubleshooting.md  update_and_rollback.md  verification.md  windows.md
docs/migrations/: TEMPLATE.md  v1_0_source_extension_transition.md
docs/module/: composition_guide.md  migration_and_compatibility.md
docs/observability/: contracts.md
docs/package/: publishing_guide.md  registry_index_spec.md  security_policy.md  upgrade_guide.md  vibe_lock_spec.md  vibe_toml_spec.md
docs/policy/: compatibility_guarantees.md  install_channels_v1.md  source_extension_policy_v1x.md  versioning_compatibility.md
docs/privacy/: telemetry_statement.md
docs/release/: distribution_matrix.md  distribution_security.md  known_limitations_gate.md  linux_runtime_compatibility_policy.md  offline_install_policy.md  phase8_6_phase9_development_plan.md  process.md  rc_process.md  release_blocker_policy.md  (+6 more)
editor-support/: hello.yb  package-lock.json
examples/: FEATURE_GAPS_CHECKLIST.md  INTENTIONAL_FAILURES_ALLOWLIST.txt  README.md  examples_manifest.json
pilot-apps/: README.md
reports/: README.md
selfhost/: README.md  diagnostics_formatter_core.yb  diagnostics_ordering_shadow.yb  docs_formatter_core.yb  formatter_core.yb  frontend_shadow_slices.yb
stdlib/: CONTRIBUTING.md  README.md  stability_policy.md
tooling/: build_system.md  checks_runner.md  incremental_compile.md  test_all_examples.sh
(+644 files in other folders)
