[package]
name = "vibe_cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
vibe_ast.workspace = true
vibe_codegen.workspace = true
vibe_diagnostics.workspace = true
vibe_hir.workspace = true
vibe_indexer.workspace = true
vibe_lsp.workspace = true
vibe_mir.workspace = true
vibe_parser.workspace = true
vibe_runtime.workspace = true
vibe_sidecar.workspace = true
vibe_types.workspace = true

[[bin]]
name = "vibe"
path = "src/main.rs"
