[package]
name = "vibe_indexer"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
vibe_ast.workspace = true
vibe_diagnostics.workspace = true
vibe_hir.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.12"
vibe_parser.workspace = true
vibe_types.workspace = true
