[package]
name = "vibe_lsp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vibe_diagnostics.workspace = true
vibe_fmt.workspace = true
vibe_indexer.workspace = true
vibe_parser.workspace = true
vibe_types.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.12"
