[package]
name = "vibe_sidecar"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["cloud"]
cloud = ["dep:reqwest", "dep:tokio", "dep:sha2", "dep:toml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vibe_indexer.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }
sha2 = { version = "0.10", optional = true }
toml = { version = "0.8", optional = true }

[lib]
path = "src/lib.rs"
